[gd_scene load_steps=3 format=3 uid="uid://d4co4o6qkbi7x"]

[ext_resource type="Script" path="res://scripts/Main_menu.gd" id="1_j3pkw"]
[ext_resource type="AudioStream" uid="uid://ctgs67umlguss" path="res://asset/sounds/JDSherbert - Ultimate UI SFX Pack - Cursor - 4.mp3" id="2_rpmmi"]

[node name="Node" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Main_menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j3pkw")
eval_scene = "res://scenes/level_selector.tscn"

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -126.5
offset_right = 108.5
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -126.5
offset_right = 72.0
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 4.0
text = "     GAME  MENU     "
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2

[node name="Left_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Btn_Play" type="Button" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Play
"

[node name="Right_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2

[node name="Left_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Btn_Eval" type="Button" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Eval
"

[node name="Right_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2

[node name="Left_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Btn_Exit" type="Button" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Exit
"

[node name="Right_spacer" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer3" type="Control" parent="CanvasLayer/Main_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Button_click" type="AudioStreamPlayer" parent="CanvasLayer/Main_menu"]
stream = ExtResource("2_rpmmi")

[connection signal="pressed" from="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer/Btn_Play" to="CanvasLayer/Main_menu" method="_on_btn_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer2/Btn_Eval" to="CanvasLayer/Main_menu" method="_on_btn_eval_pressed"]
[connection signal="pressed" from="CanvasLayer/Main_menu/VBoxContainer/HBoxContainer3/Btn_Exit" to="CanvasLayer/Main_menu" method="_on_btn_exit_pressed"]
